<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_item_upload" android:title="@string/upload_menu_title"/>
    <item android:id="@+id/menu_item_gallery" android:title="@string/gallery_menu_title"/>
    <item android:id="@+id/menu_item_refresh" android:title="@string/refresh_menu_title"/>
    <item android:id="@+id/menu_item_disconnect" android:title="@string/disconnect_menu_title"/>
    <item android:id="@+id/menu_item_sign_in" android:title="@string/sign_in_menu_title"/>
    <item android:id="@+id/menu_item_sign_out" android:title="@string/sign_out_menu_title"/>
    <item android:id="@+id/menu_item_profile" android:title="@string/profile_menu_title"/>
    <item android:id="@+id/menu_item_feedback" android:title="@string/send_feedback_title"/>
    <item android:id="@+id/menu_item_about" android:title="@string/about_menu_title"/>
    <item android:id="@+id/menu_item_theme_select" android:title="@string/change_theme_menu_title"/>
</menu>
